# autotools_demo_lib

./: .gitignore  Makefile.am  README.md  autogen.sh  autotools-demo.pc.in  autotools_demo_lib.pc.in  build.sh  config.h.in  configure.ac
build-script/: Makefile.am
build-script/arterytek/: Makefile.am
build-script/arterytek/AT32F407VGT7/: config.sh
build-script/arterytek/at32f4xx/: Makefile.am  config.sh
build-script/eeasytech/: Makefile.am
build-script/eeasytech/SV823/: Makefile.am  config.sh
build-script/eeasytech/SV826/: config.sh
build-script/esp32/: Makefile.am
build-script/esp32/esp32/: Makefile.am  config.sh
build-script/fullhan/: Makefile.am
build-script/fullhan/MC6810E/: Makefile.am  config.sh
build-script/nxp/: Makefile.am
build-script/nxp/mx6ull/: Makefile.am  config.sh
build-script/pc/: Makefile.am
build-script/pc/pc/: config.sh
build-script/pc/pc-chip/: Makefile.am  config.sh
build-script/pc/ubuntu/: config.sh
build-script/pc/ubuntu-pc/: Makefile.am  config.sh
build-script/pc/windows/: Makefile.am  config.sh
build-script/pc/windows-pc/: config.sh
build-script/rock-chips/: Makefile.am
build-script/rock-chips/rk3568/: Makefile.am  config.sh
build-script/stm32/: Makefile.am
build-script/stm32/stm32h743/: Makefile.am  config.sh
build-script/stm32/stm32h7xx/: Makefile.am  config.sh
doc/: Makefile.am  sequence_diagram.md
doc/plantuml/: Makefile.am  sequence_diagram-deinit.plantuml
docs/: Makefile.am  sequence_diagram.md
docs/plantuml/: Makefile.am  sequence_diagram-init.plantuml
example/: Makefile.am  hy_calc_demo.c  main.c  main_Makefile  test.c
example/freertos/: Makefile.am
example/linux/: Makefile.am
example/mcu/: Makefile.am  hy_calc_demo.c
example/mcu/stm32/: Makefile.am
example/mcu/stm32/stm32h7xx/: Makefile.am
example/windows/: Makefile.am
include/: Makefile.am  module_a.h  xxx.h
include/freertos/: Makefile.am
include/linux/: Makefile.am  hy_module.h
include/mcu/: Makefile.am
include/mcu/stm32/: Makefile.am
include/mcu/stm32/stm32h7xx/: Makefile.am  hy_calc.h
include/sub_include/: Makefile.am  aaa.h  module_b.h  module_b_inter.h
include/windows/: Makefile.am
m4/: ax_prog_doxygen.m4  check_debug_release.m4  check_doxygen.m4  check_java.m4  check_libcunit.m4  check_pthread.m4  enable_feature_xxx.m4  select_chip.m4  select_feature_xxx.m4  select_language.m4  select_os.m4  select_product.m4  select_target_os.m4  select_vender.m4
res/: Doxyfile  Makefile.am  get_project_info.sh
res/m4/: ax_prog_doxygen.m4  check_doxygen.m4  enable_feature_xxx.m4  select_feature_xxx.m4
res/voice/: Makefile.am
res/voice/cn/: Makefile.am
res/voice/en/: Makefile.am
src/: Makefile.am  module_a.c  xxx.c
src/freertos/: Makefile.am
src/linux/: Makefile.am  hy_module.c
src/mcu/: Makefile.am
src/mcu/stm32/: Makefile.am
src/mcu/stm32/stm32h7xx/: Makefile.am  hy_calc.c
src/sub_src/: Makefile.am  aaa.c  module_b.c
src/windows/: Makefile.am
test/: Makefile.am  hy_module_test.c
test/freertos/: Makefile.am
test/mcu/: Makefile.am
test/mcu/stm32/: Makefile.am
test/mcu/stm32/stm32h7xx/: Makefile.am  hy_calc_test.c
test/windows/: Makefile.am
unit_test/: Makefile.am  hy_calc_test.c  main.c
