# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    21/03 2022 19:12
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        21/03 2022      create the file
# 
#     last modified: 21/03 2022 19:12
# ===============================================================

if COMPILE_SELECT_VENDER_PC
select_vender = pc
endif

if COMPILE_SELECT_VENDER_EEASYTECH
select_vender = eeasytech
endif

if COMPILE_SELECT_VENDER_ARTERYTEK
select_vender = arterytek
endif

SUBDIRS = $(select_vender)

