# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    12/04 2021 16:13
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        12/04 2021      create the file
# 
#     last modified: 12/04 2021 16:13
# ===============================================================

if HAVA_JAVA_PROGRAM
SUBDIRS = plantuml

# ------------------
# defining variables
# ------------------
_install_files_com  =

# ---------------------
# add necessary content
# ---------------------
_install_files_com  += sequence_diagram.md

# ------------------
# make install files
# ------------------
dist_doc_DATA       = $(_install_files_com)

endif

