# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    08/03 2021 08:16
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        08/03 2021      create the file
# 
#     last modified: 08/03 2021 08:16
# ===============================================================

# ---------------
# make dist files
# ---------------
DIST_FILES_COM 	= Doxyfile \
				  get_project_info.sh
EXTRA_DIST 		= $(DIST_FILES_COM)

