# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    05/03 2021 17:20
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        05/03 2021      create the file
# 
#     last modified: 05/03 2021 17:20
# ===============================================================

NO_INSTALL_HEADERS_COM 	= module_b_inter.h
noinst_HEADERS  		= $(NO_INSTALL_HEADERS_COM)

INSTALL_HEADERS_COM 	= module_b.h
install_includedir 		= $(includedir)/@project_name@/sub_include
install_include_HEADERS = $(INSTALL_HEADERS_COM)
